--- a/data/fa/resume.yaml
+++ b/data/fa/resume.yaml
@@ -1,5 +1,5 @@
 name: امید فرهنگ
-title: برنامه نویس ارشد فرانت‌اند
+title: معمار فرانت‌اند و رهبر مهندسی
 contact:
   phone: "+989195038545"
   email: "hi@omid.dev"
@@ -8,18 +8,18 @@ contact:
   github: "https://github.com/omidfarhang"
   xing: "https://www.xing.com/profile/Omid_Farhang"
 summary: >
-  معمار نرم‌افزار فرانت‌ند با بیش از ۱۰ سال تجربه در طراحی و توسعه اپلیکیشن‌های وب پیچیده و رهبری تیم‌های با کارایی بالا تا ۱۵ مهندس. تخصص در معماری راهکارهای فرانت‌ند مقیاس‌پذیر، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و ارتقای کیفیت کد در اکوسیستم‌های مختلف. متخصص در Angular و TypeScript، ارائه‌دهنده رهبری معماری و نظارت فنی برای پلتفرم‌های در مقیاس سازمانی.
+  معمار فرانت‌اند و رهبر مهندسی با بیش از ۱۰ سال تجربه در ساخت و مقیاس‌دهی پلتفرم‌های وب پیچیده. رهبری تیم‌های تا ۱۵ مهندس و کسب نتایج قابل اندازه‌گیری: تحویل ۴۰٪ سریع‌تر از طریق فریم‌ورک مبتنی بر Angular و سیستم طراحی، ۵۰٪ بیلد سریع‌تر CI/CD پس از تجمیع در مونو-ریپو Nx، و کاهش زمان استقرار از ۱۵ به ۴ دقیقه از طریق بهینه‌سازی خط لوله. تخصص عمیق در Angular و TypeScript، با تمرکز قوی بر عملکرد، تست و حاکمیت پلتفرم.
 skills:
   - category: رهبری و مدیریت
-    items: [رهبری مهندسی, مربی‌گری و منتورینگ, استخدام و آنبوردینگ, مدیریت عملکرد, برنامه‌ریزی رشد, مدیریت ذینفعان, متدولوژی‌های چابک (Agile)]
-  - category: معماری و مهندسی نرم‌افزار
-    items: [معماری نرم‌افزار, سیستم‌های طراحی (Design Systems), مونو-ریپو (Nx), میکروافرانت‌ند (Micro-frontends), اصول SOLID, الگوهای طراحی (Design Patterns), بهینه‌سازی عملکرد, شاخص‌های حیاتی وب (Web Vitals)]
-  - category: اکوسیستم فرانت‌ند
-    items: [Angular (Expert), TypeScript, RxJS, مدیریت وضعیت واکنشی (Services/Subjects), تست نرم‌افزار (Vitest/Playwright/Jest), Storybook, طراحی واکنش‌گرا, نظارت بر معماری فریم‌ورک‌های مختلف]
+    items: [رهبری مهندسی, تیم‌سازی و استخدام, مربی‌گری و منتورینگ, مدیریت عملکرد, مدیریت ذینفعان, تحویل چابک (Scrum/Kanban)]
+  - category: معماری و مهندسی
+    items: [معماری فرانت‌اند, سیستم‌های طراحی, مونو-ریپو Nx, میکروافرانت‌ند, SOLID و الگوهای طراحی, مهندسی عملکرد, شاخص‌های حیاتی وب (Web Vitals)]
+  - category: اکوسیستم فرانت‌اند
+    items: [Angular (Expert), TypeScript, RxJS, مدیریت وضعیت, کتابخانه‌های کامپوننت, Storybook, تست (Vitest/Jest/Playwright)]
   - category: بک‌ند و یکپارچه‌سازی
-    items: [Node.js, NestJS, Express.js, Laravel, RESTful APIs, gRPC, پایگاه‌های داده رابطه‌ای (MySQL/MariaDB)]
-  - category: دواپس و زیرساخت
-    items: [Docker, CI/CD Pipelines, مدیریت سیستم‌های لینوکس, Nginx, امنیت اپلیکیشن (OWASP, مقابله با XSS/CSRF), استراتژی‌های CDN و کشینگ]
+    items: [Node.js, NestJS, Express.js, Laravel, REST APIs, gRPC, MySQL/MariaDB]
+  - category: دواپس و امنیت
+    items: [Docker, CI/CD, لینوکس, Nginx, OWASP Top 10, مقابله با XSS/CSRF, استراتژی‌های CDN و کشینگ]
   - category: زبان‌ها
     items: [فارسی (زبان مادری), انگلیسی (پیشرفته), آلمانی (B1)]
 experience:
@@ -29,13 +29,16 @@ experience:
     description: >
       جی‌بیت یک شرکت پیشرو در حوزه B2B FinTech است که زیرساخت‌های پرداخت و خدمات مالی سازمانی ارائه می‌دهد و میلیون‌ها تراکنش را برای بیش از ۵۰۰ مشتری سازمانی پردازش می‌کند.
     responsibilities:
-      - پیشبرد مهاجرت استراتژیک پروژه‌های قدیمی React به معماری مدرن Angular، دستیابی به ۱۰۰٪ تطابق ویژگی‌ها با پایداری کامل و بهبود ۳۰ درصدی عملکرد اپلیکیشن.
-      - هدایت تکامل فنی اکوسیستم فرانت‌ند به یک مونو-ریپو (Nx) یکپارچه، کاهش ۵۰ درصدی زمان بیلد CI/CD و افزایش ۲۵ درصدی بهره‌وری توسعه‌دهندگان.
-      - معماری فریم‌ورک فرانت‌اند اختصاصی و سیستم طراحی (Design System)، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و تضمین ثبات ۱۰۰ درصدی UI/UX.
-      - تحول در گردش کار تیم با معرفی متدولوژی‌های چابک و Jira، افزایش ۳۵ درصدی سرعت اسپرینت و کاهش ۲۰ درصدی حجم گزارش‌های باگ.
-      - پیاده‌سازی و اجرای کامل مهاجرت زیرساخت تست از Jest به Vitest، کاهش ۷۰ درصدی زمان اجرای تست‌های واحد و افزایش پوشش تست‌های E2E به ۸۵٪ با Playwright.
-      - همکاری با تیم DevOps برای بهینه‌سازی خط لوله‌های استقرار، کاهش زمان استقرار از ۱۵ دقیقه به کمتر از ۴ دقیقه و فراهم کردن امکان انتشار روزانه در محیط عملیاتی.
-      - مدیریت کامل چرخه حیات مهندسی در بخش فرانت‌اند، توسعه تیم از ۴ به ۱۵ مهندس با حفظ نرخ ماندگاری ۹۵ درصدی کارکنان.
+      - رهبری مهاجرت اپلیکیشن‌های قدیمی React به Angular، با حفظ ۱۰۰٪ ویژگی‌ها و بدون زمان خرابی.
+      - بهبود ۳۰ درصدی عملکرد اپلیکیشن از طریق مدرن‌سازی و بهینه‌سازی.
+      - تجمیع مخازن پراکنده و Git Submoduleها در یک مونو-ریپو Nx؛ کاهش ۵۰ درصدی زمان بیلد CI/CD.
+      - بهبود ۲۵ درصدی بهره‌وری توسعه‌دهندگان با استانداردسازی ابزارها و گردش کار در مونو-ریپو.
+      - ساخت فریم‌ورک داخلی مبتنی بر Angular و سیستم طراحی، کاهش ۴۰ درصدی زمان تحویل و تضمین ۱۰۰٪ ثبات UI/UX.
+      - پیاده‌سازی تحویل چابک مبتنی بر Jira، افزایش ۳۵ درصدی سرعت اسپرینت و کاهش ۲۰ درصدی حجم گزارش‌های باگ.
+      - مهاجرت تست‌های واحد از Jest به Vitest، کاهش ۷۰ درصدی زمان اجرای تست‌های واحد.
+      - افزایش پوشش تست‌های Playwright E2E به ۸۵٪.
+      - بهینه‌سازی خط لوله‌های استقرار مبتنی بر Docker با تیم DevOps، کاهش زمان استقرار از ۱۵ دقیقه به کمتر از ۴ دقیقه و فراهم کردن امکان انتشار روزانه.
+      - مقیاس‌دهی سازمان فرانت‌اند از ۱ به ۴ مهندس با حفظ نرخ ماندگاری ۱۰۰٪.
     skills: [رهبری مهندسی, مربی‌گری (Mentorship), Angular, TypeScript, Nx, RxJS, Vitest, Playwright, Storybook, Docker, CI/CD, Agile]
   - title: مشاور فنی / راهبر فنی
     company: رایمندان تالی پارسه
@@ -43,10 +46,13 @@ experience:
     description: >
       رایمندان تالی پارسه یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - راهبری توسعه لندینگ‌پیج‌ها و پورتال‌های مشتریان، دستیابی به افزایش ۲۵ درصدی در نرخ تبدیل کاربر و حفظ پایداری ۹۹.۹ درصدی سرویس.
-      - معماری و مدیریت زیرساخت‌های امن لینوکسی (Ubuntu, Nginx, MariaDB) برای سرویس‌های وب و ایمیل، پشتیبانی از بیش از ۱۰,۰۰۰ کاربر فعال ماهانه بدون هیچ‌گونه رخنه امنیتی.
-      - پیاده‌سازی راهکارهای پخش زنده ویدیو (RTSP/FFmpeg) برای مانیتورینگ دوربین‌های داخلی تحت وب، کاهش ۴۰ درصدی تأخیر استریم و پشتیبانی از ۵۰ فید همزمان با کیفیت بالا.
-      - ایفای نقش مشاور فنی مدیریت، کاهش ۶۰ درصدی میانگین زمان بازیابی حوادث در زمان حملات شبکه و قطعی‌های ISP.
+      - تحویل لندینگ‌پیج‌ها و پورتال‌های مشتریان، افزایش ۲۵ درصدی نرخ تبدیل کاربر.
+      - حفظ پایداری ۹۹.۹ درصدی سرویس برای پلتفرم‌های مشتری‌محور.
+      - مدیریت زیرساخت Ubuntu/Nginx/MariaDB برای سرویس‌های وب و ایمیل با پشتیبانی از بیش از ۱۰,۰۰۰ کاربر فعال ماهانه.
+      - حفظ وضعیت امنیتی قوی بدون هیچ‌گونه رخنه امنیتی گزارش شده.
+      - پیاده‌سازی پخش زنده وب مبتنی بر RTSP/FFmpeg برای مانیتورینگ دوربین‌های داخلی، کاهش ۴۰ درصدی تأخیر استریم.
+      - مقیاس‌دهی استریم برای پشتیبانی از ۵۰ فید همزمان با کیفیت بالا.
+      - کاهش ۶۰ درصدی زمان بازیابی حوادث در زمان حملات شبکه و قطعی‌های ISP به عنوان مشاور فنی.
     skills: [مشاوره فنی, مدیریت زیرساخت, Linux, Nginx, MariaDB, RTSP, FFmpeg, Ubuntu]
   - title: Lead Frontend Developer
     company: پولیتو
@@ -54,17 +60,21 @@ experience:
     description: >
       پولیتو یک استارتاپ فین‌تک بود که راهکارهای پرداخت نوآورانه ارائه می‌داد.
     responsibilities:
-      - رهبری تیم مهندسی فرانت‌ند در توسعه داشبوردهای با کارایی بالا، سرویس‌دهی به بیش از ۵۰,۰۰۰ کاربر با زمان بارگذاری صفحات زیر یک ثانیه.
-      - معماری و پیاده‌سازی لایه‌های پیچیده ارتباط داده با استفاده از Angular و gRPC، کاهش ۶۰ درصدی حجم داده‌های ارسالی و بهبود ۴۵ درصدی کارایی به‌روزرسانی‌های بلادرنگ.
-      - هدایت توسعه لندینگ‌پیج‌های واکنش‌گرا، کسب امتیاز ۹۵+ در Lighthouse و افزایش ۳۰ درصدی تعامل کاربران موبایل.
+      - رهبری تیم فرانت‌ند در تحویل داشبوردهای ادمین و مشتری برای بیش از ۵۰,۰۰۰ کاربر با زمان بارگذاری زیر یک ثانیه.
+      - طراحی لایه‌های ارتباطی Angular + gRPC، کاهش ۶۰ درصدی حجم داده‌ها.
+      - بهبود ۴۵ درصدی کارایی به‌روزرسانی‌های بلادرنگ از طریق بهینه‌سازی مدیریت داده‌ها.
+      - تحویل لندینگ‌پیج‌های واکنش‌گرا، کسب امتیاز ۹۵+ در Lighthouse و افزایش ۳۰ درصدی تعامل کاربران موبایل.
     skills: [رهبری تیم, Angular, gRPC, TypeScript, CSS, RxJS]
   - title: Lead Frontend Developer (ارتقا یافته از Junior)
     company: مدرن‌پل
     period: اکتبر ۲۰۱۵ - نوامبر ۲۰۱۸
     responsibilities:
-      - پیشرفت سریع از سطح Junior به Lead Frontend Developer، نظارت فنی بر ۳ پلتفرم اصلی و مربی‌گری ۵ توسعه‌دهنده جونیور.
-      - اجرای مهاجرت در مقیاس بزرگ از AngularJS به Angular 2+، بهبود ۴۰ درصدی عملکرد زمان اجرای اپلیکیشن و کاهش ۲۵ درصدی حجم باندل.
-      - همکاری مستقیم با CTO جهت همسوسازی استراتژی‌های فرانت‌ند با اهداف تجاری و نقشه‌های راه فنی.
+      - ارتقا از سطح Junior به Lead Frontend Developer، تعیین جهت فنی برای ۳ پلتفرم اصلی و مربی‌گری ۵ توسعه‌دهنده جونیور.
+      - مهاجرت از AngularJS به Angular 2+، بهبود ۴۰ درصدی عملکرد زمان اجرای اپلیکیشن.
+      - کاهش ۲۵ درصدی حجم باندل از طریق مدرن‌سازی و بهینه‌سازی.
+      - ساخت ویژگی‌های Full-stack برای پلتفرم تبادل ارز با استفاده از Angular و Laravel، پردازش بیش از ۱ میلیون دلار تراکنش ماهانه.
+      - رهبری انتقال بک‌ند از PHP Laravel به Java Spring Boot، بهبود ۵۰ درصدی زمان پاسخگویی API و افزایش ۳ برابری ظرفیت سیستم.
+      - همکاری با CTO جهت همسوسازی استراتژی فرانت‌ند با اهداف تجاری و نقشه‌های راه فنی.
     skills: [هدایت فنی, Angular, AngularJS, Laravel, PHP, Java, Spring Boot, Gradle]
   - title: مدیر سیستم و توسعه‌دهنده وب
     company: شرکت مشاوره حاسب سیستم
@@ -72,9 +82,18 @@ experience:
     description: >
       حاسب سیستم یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - نوسازی کامل زیرساخت IT شرکت برای بیش از ۳۰ ایستگاه کاری، کاهش ۹۰ درصدی زمان قطعی شبکه و دو برابر کردن سرعت انتقال داده‌های داخلی.
-      - توسعه پورتال‌های داخلی PHP/MySQL، خودکارسازی فرآیند حقوق و دستمزد برای بیش از ۵۰ کارمند و کاهش ۳۰ درصدی هزینه‌های اداری.
+      - نوسازی زیرساخت IT شرکت برای بیش از ۳۰ ایستگاه کاری، رفع مشکلات بحرانی Domain Controller و DNS و کاهش ۹۰ درصدی زمان قطعی شبکه.
+      - مدیریت محیط‌های Windows Server و TFS، حفظ پایداری ۹۹.۹ درصدی برای سرویس‌های توسعه حیاتی.
+      - ایجاد پورتال داخلی جامع PHP/MySQL برای ردیابی زمان و حقوق و دستمزد، خودکارسازی فرآیندها برای بیش از ۵۰ کارمند و کاهش ۳۰ درصدی هزینه‌های اداری.
+      - راه‌اندازی پلتفرم سلامت چندمنظوره شامل دایرکتوری پزشکی و انجمن گفتگو، جذب بیش از ۵,۰۰۰ کاربر ثبت‌نام شده در ۶ ماه.
     skills: [مدیریت سیستم, زیرساخت IT, PHP, MySQL, Windows Server, TFS, DNS, Networking]
+  - title: اوایل دوران حرفه‌ای (پشتیبانی IT)
+    company: صدا و سیما (IRIB)
+    period: سپتامبر ۲۰۰۷ - ژوئن ۲۰۰۸
+    description: >
+      سازمان صدا و سیمای جمهوری اسلامی ایران (IRIB).
+    responsibilities:
+      - طراحی ابزارهای داخلی مبتنی بر وب و ارائه پشتیبانی IT برای محیط‌های مبتنی بر ویندوز.
 certifications:
   - title: مدرک زبان آلمانی (B1)
     provider: Goethe-Institut
