--- a/data/recommendations.yaml
+++ b/data/recommendations.yaml
@@ -31,7 +31,7 @@
   text: "I have received numerous pieces of information from Omid that were helpful, timely, and thorough. As an owner of an internet-based business, this has helped me."
 
 - name: "Joy Reardon"
-  title: "meat cutter at retired"
+  title: "Retired"
   avatar: ""
   date: "2011-04-10"
   source: "linkedin"
